docs/v0.91.6/Web使用指南.md
# Web 版使用指南
Web Version Usage Guide

## 版本信息
Version Info

- **版本号 Version**: 0.91.6

---

## 本地运行
Run Locally

### 方法 1: 使用 Python 服务器
Method 1: Using Python Server

```bash
cd web
python -m http.server 8080
```

### 方法 2: 使用批处理脚本（Windows）
Method 2: Using Batch Script (Windows)

双击运行 `web/启动Web页面.bat`，然后在浏览器打开 http://localhost:8080

Or double-click `web/启动Web页面.bat` and open http://localhost:8080 in your browser.

### 方法 3: 使用 Node.js serve
Method 3: Using Node.js serve

```bash
cd web
npx serve -p 3001
```

---

## 浏览器兼容性
Browser Compatibility

- 支持所有现代浏览器
  Supports all modern browsers

- Chrome/Edge 推荐
  Chrome/Edge recommended

---

## Web 版特点
Web Version Features

- 🌐 无需安装，直接在浏览器运行
  No installation required, runs directly in browser

- 📱 响应式设计，支持手机和电脑
  Responsive design, supports mobile and desktop

- 🔒 所有数据保存在浏览器本地存储
  All data stored in browser local storage

- 🌙 支持白天/夜晚模式
  Supports day/night mode

- 🌐 支持中英文双语
  Supports Chinese/English bilingual

---

## v0.91.6 更新内容
What's New in v0.91.6

- ✨ 优化手机版柱状图显示，增加柱间距，避免日期重叠
  Optimized mobile bar chart display, increased bar spacing, avoid date overlapping

- ✨ 在记录界面显示每条记录与上一条的时长差异
  Show duration difference compared to previous record in records page

- ✨ 快了用红色显示，慢了用绿色显示
  Faster shown in red, slower shown in green

- ✨ 实现外观设置整体导入导出功能
  Implemented appearance settings import/export

- ✨ 允许自定义外观保存为预设
  Allow saving custom appearance as preset

- ✨ 将导入导出按钮移到外观管理顶部
  Moved import/export buttons to top of appearance management

- ✨ 在自定义主题区域添加保存按钮
  Added save button to custom theme section

- ✨ 将分析界面的纵向柱状图改为横向
  Changed vertical bar chart to horizontal in analytics page

---

## v0.91 更新内容
What's New in v0.91

- ✨ 添加性癖管理功能，与媒介管理并列
  Added fetish management, parallel to medium management

- ✨ 在添加/编辑记录时可选择性癖（支持多选）
  Added fetish selection when adding/editing records (supports multi-select)

- ✨ 分析页面新增最常用的性癖统计
  Added most used fetish statistics in analytics page

- ✨ 新增媒介和性癖分布饼状图
  Added pie charts for medium and fetish distribution

- ✨ 新增统计无记录的设置选项
  Added setting option to include empty records in statistics

- ✨ 删除媒介/性癖时同步更新相关记录
  Automatically update related records when deleting medium/fetish

- ✨ 将"最喜欢的媒介"改为"最常用的媒介"
  Changed "Favorite Medium" to "Most Used Medium"

- ✨ 默认性癖改为"纯爱"
  Changed default fetish to "Pure Love"

- ✨ 优化分析页面布局
  Optimized analytics page layout

- ✨ 新增性癖多选功能，可同时选择多个性癖
  Added multi-fetish selection, can select multiple fetishes at once

- ✨ 增大柱状图尺寸，优化视觉效果
  Increased bar chart size for better visual experience

- ✨ 修复年份柱状图只显示双数月的问题，现在完整显示12个月
  Fixed year bar chart only showing even months, now shows all 12 months

- ✨ 修复自定义时间范围的柱状图显示问题
  Fixed custom time range bar chart display issue

- ✨ 优化夜晚模式下柱状图文字颜色显示
  Improved bar chart text color in dark mode

- ⚡ 优化代码性能，添加缓存机制减少重复计算
  Optimized code performance with caching mechanism
